tests/baselines/reference/scannerClass2.errors.txt
==== tests/cases/compiler/scannerClass2.ts (3 errors) ====
    
    
        export class LoggerAdapter implements ILogger {
                                              ~~~~~~~
!!! scannerClass2.ts(3,43): error TS2095: Cannot find name 'ILogger'.
            constructor (public logger: ILogger) { 
                                        ~~~~~~~
!!! scannerClass2.ts(4,37): error TS2095: Cannot find name 'ILogger'.
                this._information = this.logger.information();
                     ~~~~~~~~~~~~
!!! scannerClass2.ts(5,18): error TS2094: Property '_information' does not exist on value of type 'LoggerAdapter'.
            }
        }